# unfust

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.json
.claude/agents/: security-reviewer.md
backend/: Dockerfile  pyproject.toml
backend/alembic/versions/: 5a997eedecd9_initial_user_tables.py  9f0f78f14cf8_add_widget_models.py  b2b52dd2ccb6_add_notes_table.py  b4bfcecf23f3_add_habit_tracker_tables.py  d0583ca94185_add_location_field_to_users.py
backend/app/: config.py  database.py  dependencies.py  main.py  security.py
backend/app/models/: __init__.py  habit.py  note.py  user.py  widget.py
backend/app/routers/: auth.py  bookmarks.py  habits.py  notes.py  rss.py  users.py  widgets.py
backend/app/schemas/: __init__.py  auth.py  habit.py  note.py  user.py  widget.py
backend/app/services/: auth.py  bookmark.py  email.py  habit.py  note_service.py  rss.py  system.py  weather.py  widget.py
backend/tests/: test_auth_api.py  test_auth_service.py  test_bookmarks.py  test_habits.py  test_rss.py  test_security.py  test_system.py  test_weather.py  test_widget_layout.py
docs/plans/: 2026-02-14-auth-and-docker-design.md  2026-02-14-auth-and-docker-plan.md  2026-02-15-dashboard-widgets-design.md  2026-02-15-dashboard-widgets-plan.md  2026-02-15-habit-tracker-design.md  2026-02-15-habit-tracker-plan.md
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/app/: root.tsx  (+2 more)
scripts/: bump-version.py  changelog.py  common.sh  release.sh  rollback.sh
(+37 files in other folders)
