[project]
name = "unfust-backend"
version = "0.1.0"
description = "Unfust personal dashboard backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.21",
    "alembic>=1.15",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.20",
    "aiosmtplib>=3.0",
    "slowapi>=0.1",
    "email-validator>=2.0",
    "httpx>=0.28",
    "feedparser>=6.0",
    "psutil>=6.0",
    "docker>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "respx>=0.21",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
